Changed thumbnail size in the record page sidebar to be larger

--- a/rooibos/data/templates/data_record.html
+++ b/rooibos/data/templates/data_record.html
@@ -74,7 +74,7 @@ $(document).ready(function() {
 <div class="facet active-facet" id="data_record_thumbnail">
     <div class="facet-header">Thumbnail</div>
     <div class="facet-body">
-        {% record record "True" "thumb" "True" %}
+        {% record record "True" "320x240" "True" %}
     </div>
 </div>
 {% endif %}
