Disabled any editing (including custom fields) for users without those permissions
A bit finer grained than the usual rooibos style, used the
has_perm("data.change_record") permission to restrict who can do anything.
Added gain in making less confusing (marginally) for casual users
Put this in the mcah branch b/c not everyone wants to track these permissions.

--- a/rooibos/data/templates/data_record.html
+++ b/rooibos/data/templates/data_record.html
@@ -88,7 +88,7 @@ $(document).ready(function() {
 </div>
 {% endif %}
 
-{% if request.user.is_authenticated and record.id %}
+{% if request.user.is_authenticated and record.id and can_edit %}
 <div class="facet active-facet" id="data_record_editing">
     <div class="facet-header">Editing</div>
     <div class="facet-body">
