Updated the look and feel to Columbia colors: annoyingly, not all colors can be tweaked from settings_local

--- a/rooibos/templates/master.html
+++ b/rooibos/templates/master.html
@@ -79,6 +79,7 @@
 {% block footer %}
             <div id="footer">
                 Copyright 1997-2011 James Madison University
+		<!-- EDIT HERE FOOTER -->
             </div>
 {% endblock %}
 
