--- a/rooibos/templates/master.html
+++ b/rooibos/templates/master.html
@@ -94,14 +94,14 @@
 {% spaceless %}
     <div id="topmenu">
         <ul>
-            {% if user.is_authenticated and user.username != ANONYMOUS_DOMAIN_USER %}
+            {% if user.is_authenticated and not user.username in ANONYMOUS_DOMAIN_USERS %}
             <li>Welcome{% if user.first_name %}, {{ user.first_name }}{% endif %}</li>
             <li><a href="{% url logout %}?next={% url main %}">Log out</a></li>
             <li><a href="{% url ui-options %}">Options</a></li>
             <li><a href="{% url ui-management %}">Management</a></li>
             {% else %}
             <li><a href="{% url login %}?next={{ request.get_full_path }}">Log in</a></li>
-            {% endif %}
+	    {% endif %}
             <li>{% with request.pagehelp|default:"" as help %}{% pagehelp help %}{% endwith %}</li>
             {% if ADMINS %}
             <li><a href="{% url ui-report-problem %}">Report a Problem</a></li>
