Changed the attribution footer to include Columbia notice of content

--- a/rooibos/templates/master.html
+++ b/rooibos/templates/master.html
@@ -78,7 +78,7 @@
 
 {% block footer %}
             <div id="footer">
-                Copyright 1997-2011 James Madison University
+                MDID copyright 1997-2011 James Madison University.  Fieldwork photos copyright 2011 Columbia University Media Center for Art History.
 		<!-- EDIT HERE FOOTER -->
             </div>
 {% endblock %}
