Changed the reindexing page to use a context
This means that the reindex page in fact has the right styles,
and looks like the rest of the site.

--- a/rooibos/data/templates/data_reindex.html
+++ b/rooibos/data/templates/data_reindex.html
@@ -1,4 +1,8 @@
-{% extends "master.html" %}
+{% extends request.master_template|default:"master.html" %}
+
+{% load ui %}
+{% load viewers %}
+{% load data %}
 
 {% block content %}
 
