Add feedback to storage creation, same as collection creation

--- a/rooibos/storage/templates/storage_edit.html
+++ b/rooibos/storage/templates/storage_edit.html
@@ -75,7 +75,7 @@
 
 {% block content %}
 
-<h1>Edit Storage</h1>
+<h1>{% if new_storage %}New{% else %}Edi{% endif %} Storage</h1>
 
 <h2>{{ storage.title }}</h2>
 
