--- a/rooibos/ui/templates/main.html
+++ b/rooibos/ui/templates/main.html
@@ -115,14 +115,16 @@
     {% if not user.is_authenticated %}
         <h2>Log in</h2>
 
-        <form action="{% url login %}" method="post">{% csrf_token %}
+	<a href="#" onclick="document.submitwind.submit();">Login with your UNI</a>
+
+        <!-- <form action="{% url login %}" method="post">{% csrf_token %}
             <table summary="Login">
             <tr><td>{{ login_form.username.label_tag }}</td><td>{{ login_form.username }}</td></tr>
             <tr><td>{{ login_form.password.label_tag }}</td><td>{{ login_form.password }}
                 <br /><br /><input type="submit" value="Log in" /></td></tr>
             </table>
             <input type="hidden" name="next" value="{% url main %}" />
-        </form>
+        </form> -->
 
     {% else %}
         <h2>Welcome{% if user.first_name %}, {{ user.first_name }}{% endif %}</h2>
