Update INSECURE_UPLOAD to work on record pages
Instead of displaying an upload form, display a link to the page through
http instead of https. Decide whether to display a form or not by
looking at the request, which is duped code from the previous
INSECURE_UPLOAD update.

--- a/rooibos/data/templates/data_record.html
+++ b/rooibos/data/templates/data_record.html
@@ -212,7 +212,11 @@ $(document).ready(function() {
     <div class="facet-header">Upload Media</div>
     <div class="facet-body">
 {% if record.id %}
+{% if insecure_url %}
+<a href="{{ insecure_url }}">Enable upload media</a>
+{% else %}
 {% include "storage_upload_sidebar.html" %}
+{% endif %}
 {% else %}
 Please save the record before uploading media.
 {% endif %}
