--- a/rooibos/ui/templates/main.html
+++ b/rooibos/ui/templates/main.html
@@ -112,23 +112,18 @@
   <div class="columns">
 
     <div class="column">
-    {% if not user.is_authenticated %}
-        <h2>Log in</h2>
+    {% if not user.is_authenticated or user_login %}
+        <h2>Login</h2>
 
-	<a href="#" onclick="document.submitwind.submit();">Login with your UNI</a>
-
-        <!-- <form action="{% url login %}" method="post">{% csrf_token %}
-            <table summary="Login">
-            <tr><td>{{ login_form.username.label_tag }}</td><td>{{ login_form.username }}</td></tr>
-            <tr><td>{{ login_form.password.label_tag }}</td><td>{{ login_form.password }}
-                <br /><br /><input type="submit" value="Log in" /></td></tr>
-            </table>
-            <input type="hidden" name="next" value="{% url main %}" />
-        </form> -->
+	<p>
+	  <button onclick="document.submitwind.submit();">Login with your UNI</button>
+	</p>
 
     {% else %}
         <h2>Welcome{% if user.first_name %}, {{ user.first_name }}{% endif %}</h2>
     {% endif %}
+    <p>LUMEN is a digital image database curated by the <a href="http://mcah.columbia.edu/">Media Center for Art History</a> in the Department of Art History and Archaeology at <a href="http://www.columbia.edu">Columbia University</a>.</p> 
+    <p>Based on an open source application developed at James Madison University.</p>
     </div>
 
     <div class="column announcements">
