--- a/rooibos/ui/templates/master.css
+++ b/rooibos/ui/templates/master.css
@@ -54,11 +54,12 @@
 
 #logo {
     background: url({% url static 'images/mdid_logo.png' %}) no-repeat bottom left;
-    width: 150px;
+    width: 200px;
     height: 50px;
     display: block;
     float: left;
     margin-left: 10px;
+    margin-right: 15px;
 }
 
 
