Changed name to Vasari

--- a/rooibos/ui/templates/main.html
+++ b/rooibos/ui/templates/main.html
@@ -122,8 +122,7 @@
     {% else %}
         <h2>Welcome{% if user.first_name %}, {{ user.first_name }}{% endif %}</h2>
     {% endif %}
-    <p>LUMEN is a digital image database curated by the <a href="http://mcah.columbia.edu/">Media Center for Art History</a> in the Department of Art History and Archaeology at <a href="http://www.columbia.edu">Columbia University</a>.</p> 
-    <p>Based on an open source application developed at James Madison University.</p>
+    <p>This digital image database is curated by the Media Center for Art History in the Department of Art History and Archaeology at Columbia University.  The software, MDID3, is an open-source application developed at James Madison University.</p>
     </div>
 
     <div class="column announcements">
