--- a/rooibos/templates/master.html
+++ b/rooibos/templates/master.html
@@ -78,7 +78,7 @@
 
 {% block footer %}
             <div id="footer">
-                Powered by MDID &copy; 1997-2011 James Madison University.  Fieldwork &copy; 2011 Columbia University Media Center for Art History.
+                Powered by MDID &copy; 1997-2012 James Madison University.  Fieldwork &copy; 1998-2012 Columbia University Media Center for Art History.
 		<!-- EDIT HERE FOOTER -->
             </div>
 {% endblock %}
@@ -165,7 +165,7 @@
                     <li><a href="{% url presentation-browse %}">Experience</a>
                         <ul class="menu">
                             <li><a href="{% url presentation-browse %}">Browse Presentations</a></li>
-                            <li><a href="{% url showcases %}">Showcases</a></li>
+                            <!-- <li><a href="{% url showcases %}">Showcases</a></li> -->
                             {% if user.is_authenticated %}
                             <li><a href="{% url mediaviewer-install %}">MediaViewer</a></li>
                             {% endif %}
