--- a/rooibos/ui/templates/ui_management.html
+++ b/rooibos/ui/templates/ui_management.html
@@ -31,6 +31,9 @@
     <li><a href="{% url data-import %}"><img src="{% url static 'images/icons/applix.png' %}" alt="Import Metadata" /> Import Metadata</a></li>
 {% endif %}
     <li><a href="{% url data-collections-manage %}"><img src="{% url static 'images/icons/bookcase.png' %}" alt="Manage Collections" /> Manage Collections</a></li>
+{% if user.is_superuser %}
+    <li><a href="{% url data-reindex %}"><img src="{% url static 'images/icons/refresh.png' %}" alt="Rebuild Search Index" />Rebuild Search Index</a></li>
+{% endif %}
 {% if storage_write and collection_write %}
     <li><a href="{% url storage-import %}"><img src="{% url static 'images/icons/multimedia.png' %}" alt="Import Media Files" /> Import Media Files</a></li>
 {% endif %}
