--- a/rooibos/data/templates/data_record.html
+++ b/rooibos/data/templates/data_record.html
@@ -202,9 +202,11 @@ $(document).ready(function() {
             {{ m.name }}
             {% endif %}
             {{ m.mimetype }}
-            {% if m.width and m.height %}
+            {% comment %}
+	    {% if m.width and m.height %}
                 {{ m.width }}x{{ m.height }}
             {% endif %}
+	    {% endcomment %}
             {% if m.editable_in_template %}
             <form class="delete-media-form" method="POST" action="{% url storage-media-delete m.id, m.name %}?next={{ request.get_full_path }}">{% csrf_token %}
                 <input type="submit" value="Delete Media" />
