--- a/rooibos/ui/templates/main.html
+++ b/rooibos/ui/templates/main.html
@@ -122,7 +122,7 @@
     {% else %}
         <h2>Welcome{% if user.first_name %}, {{ user.first_name }}{% endif %}</h2>
     {% endif %}
-    <p>This digital image database is curated by the Media Center for Art History in the Department of Art History and Archaeology at Columbia University.  The software, MDID3, is an open-source application developed at James Madison University.</p>
+    <p>This digital image database is curated by the Media Center for Art History in the Department of Art History and Archaeology at Columbia University.</p>
     </div>
 
     <div class="column announcements">
